--- a/sap/templates/proyectos/importarproyecto.html
+++ b/sap/templates/proyectos/importarproyecto.html
@@ -81,7 +81,7 @@
 				{% endif %}
 			{% endfor %}
 			<div align="center"><br>
-						<a href="/"><button type="button" class="btn btn-default">Cancelar</button></a>
+						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 			</div>
 		</div>
 		</div>
