--- a/sap/templates/proyectos/proyectoalerta.html
+++ b/sap/templates/proyectos/proyectoalerta.html
@@ -4,7 +4,7 @@
 	<div class="bs-example" align="center">
 		<h2>Notificacion</h2>
 			<p class="text-warning"><small>{{ mensaje }}</small></p>
-			<a type="button" class="btn btn-default" href="/">Volver</a>
+			<a type="button" class="btn btn-default" href="/"><span class="glyphicon glyphicon-arrow-left"></span> Volver</a>
 	</div>
 </div>
 {% endblock %}
