--- a/sap/templates/autenticacion/autenticacion.html
+++ b/sap/templates/autenticacion/autenticacion.html
@@ -2,16 +2,26 @@
 {% block titulo %}Registro de Usuario{% endblock %}
 
 {% block contenido %}
-	<div class="page-header">
-  		<h1 align="center">Registro de Usuario</h1>
+<div class="panel panel-default">
+  <div class="panel-body">
+
+  		<h1 align="center">Sistema de Administracion de Proyectos</h1>
+
 	</div>
+</div>
 	{% if mensaje %}
   			<div class="alert alert-danger"><h3><p align="center"><b>{{ mensaje }}</b></p></h3></div>
 	{% endif %}
 	<div class="jumbotron boxlogin">
+	<h4><small><b>Por favor, inicie sesión...</b></small></h4>
 		<form method="POST" name="flogin" id="flogin">{% csrf_token %}
-			{{ form.as_p }}
-			<button class="btn btn-lg btn-success btn-block" type="submit">Ingresar</button>
+			<span class="input-group-addon"><b>Usuario</b></span>
+			<input type="text" class="form-control" id="username" name="Usuario" placeholder="Usuario">
+        	<br>
+			<span class="input-group-addon"><b>Clave</b></span>
+			<input type="password" class="form-control" id="password" name="Clave" placeholder="Clave">
+			<br>
+			<button class="btn btn-lg btn-success btn-block" type="submit"><span class="glyphicon glyphicon-log-in"></span> Ingresar</button>
 		</form>
 	</div> 
 {% endblock %}
