--- a/sap/templates/proyectos/consultarproyecto.html
+++ b/sap/templates/proyectos/consultarproyecto.html
@@ -55,8 +55,8 @@
 						  		<p><h2><span class="label label-default">Fases</span></h2></h4></p>
 						  	</tr>
 						  	<tr class="active">
-						  		<td><p><h4>Nombre de Fase</h4></p></td>
-						  		<td><p><h4>Estado</h4></p></td>
+						  		<td><p><h4><b>Nombre de Fase</b></h4></p></td>
+						  		<td><p><h4><b>Estado</b></h4></p></td>
 						  	</tr>
 						  	
 						  	{% for fase in fases %}
@@ -71,7 +71,7 @@
 						<p><h2><span class="label label-default">El proyecto aun no cuenta con fases</span></h2></h4></p>
 					{% endif %}
 					<div align="center">
-						<a href="/"><button type="button" class="btn btn-default">Volver</button></a>
+						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
 					</div>
 				</div>
 				
