--- a/sap/templates/proyectos/crearproyectoimportado.html
+++ b/sap/templates/proyectos/crearproyectoimportado.html
@@ -27,7 +27,7 @@
 					</table>
 					<div align="center"><br>
 						<input class="btn btn-default" type="submit" value="Importar Proyecto"/>
-						<a href="/"><button type="button" class="btn btn-default">Cancelar</button></a>
+						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 					</div>
 				</div>
 				
