--- a/sap/templates/proyectos/listarmiembrosproyecto.html
+++ b/sap/templates/proyectos/listarmiembrosproyecto.html
@@ -22,10 +22,10 @@
 					<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
 						  	<tr class="active">
-						  		<td><p><h4>ID</h4></p></td>
-						  		<td><p><h4>Nombre de Usuario</h4></p></td>
-						  		<td><p><h4>Nombre y Apellido</h4></p></td>
-						  		<td><p><h4>Rol</h4></p></td>
+						  		<td><p><h4><b>ID</b></h4></p></td>
+						  		<td><p><h4><b>Nombre de Usuario</b></h4></p></td>
+						  		<td><p><h4><b>Nombre y Apellido</b></h4></p></td>
+						  		<td><p><h4><b>Rol</b></h4></p></td>
 						  	</tr>
 						  	{% for miembro in miembros %}
 								<tr class="active">
@@ -41,7 +41,7 @@
 						<p><h2><span class="label label-default">El proyecto aun no cuenta con Miembros</span></h2></h4></p>
 					{% endif %}
 					<div align="center">
-						<a href="/"><button type="button" class="btn btn-default">Volver</button></a>
+						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
 					</div>
 				</div>
 				
