--- a/sap/templates/proyectos/modificarproyecto.html
+++ b/sap/templates/proyectos/modificarproyecto.html
@@ -25,7 +25,7 @@
 		</table>
 		<div align="center"><br>
 			<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
-			<a href="/"><button type="button" class="btn btn-default">Cancelar</button></a>
+			<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 		</div>
 	</form>
 </div>
