un icono añadido

--- a/sap/templates/proyectos/importarproyecto.html
+++ b/sap/templates/proyectos/importarproyecto.html
@@ -74,7 +74,7 @@
 				    
 				    <div id="collapse{{ proyecto.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<a href="importar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm">Importar Proyecto</button></a>
+				      		<a href="importar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-import"></span> Importar Proyecto</button></a>
 				      </div>
 				    </div>
 				</div>
