--- a/sap/templates/Roles/roles.html
+++ b/sap/templates/Roles/roles.html
@@ -33,35 +33,46 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	<div class="panel-group" id="accordion">
-	{% if lista_roles %}
-			{% for rol in lista_roles %}
+	{% if mis_roles %}
+			{% for mi_rol in mis_roles %}
 	<div class="panel panel-default">
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
-				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ rol.id }}">
-				          	 {{ rol.rol.name }}
+				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ mi_rol.id }}">
+				          	 {{ mi_rol.name }}
 				        </a>
 				      </h4>
 				    </div>
-				    <div id="collapse{{ rol.id }}" class="panel-collapse collapse">
+				    <div id="collapse{{ mi_rol.id }}" class="panel-collapse collapse">
 				      <div class="panel-body">
-				      		<a href="consultar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="modificar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="open-Modal btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal" data-id="{{ rol.id }}">Eliminar</button>
+				      		<a href="consultar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<a href="asignar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Rol</button></a>
+				      		<a href="desasignar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Rol</button></a>
+				      		<button class="btn btn-danger btn-sm roles" data-toggle="modal" data-target="#myModal" data-id="{{ mi_rol.id }}">Eliminar</button>
 
 				      </div>
 				    </div>
 	</div>
 			{% endfor %}
-		{% endif %}
+		
 	<br>
+	{% else %}
+		<div class="panel panel-default">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				          	No posee ningun Rol!
+				      </h4>
+				    </div>
+		</div>
+	{% endif %}
 		{% if lista_roles %}
 			{% for rol in lista_roles %}
-	<div class="panel panel-default">
+			<div class="panel panel-default">
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ rol.id }}">
-				          	{{ rol.rol.name }}
+				          	{{ rol.name }}
 				        </a>
 				      </h4>
 				    </div>
@@ -69,14 +80,15 @@
 				      <div class="panel-body">
 				      		<a href="consultar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="modificar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="open-Modal btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal" data-id="{{ rol.id }}">Eliminar</button>
+				      		<a href="asignar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Rol</button></a>
+				      		<a href="desasignar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Rol</button></a>
+				      		<button class="btn btn-danger btn-sm roles" data-toggle="modal" data-target="#myModal" data-id="{{ rol.id }}">Eliminar</button>
 
 				      </div>
 				    </div>
-	</div>
+			</div>
 			{% endfor %}
 		{% endif %}
-		
 		<!-- Ininicia Modal -->
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		  <div class="modal-dialog">
@@ -90,7 +102,7 @@
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-		       <a id="link" href=""><button type="button" class="btn btn-danger">Eliminar</button></a>
+		       <a id="rol" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
 		      </div>
 		    </div>
 		  </div>
