--- a/sap/templates/Roles/rolnuevo.html
+++ b/sap/templates/Roles/rolnuevo.html
@@ -19,12 +19,12 @@
 	
 	<form action="" method="post">
 		<table align="center">
-			{{ form.as_table }}
+			{{ form.as_p }}
 		</table>
 		{% csrf_token %}
 	<div align="center"><br>
 		<input class="btn btn-default" type="submit" value="Crear"/>
-		<a href="/adm_usuarios/"><button type="button" class="btn btn-default">Cancelar</button></a>
+		<a href="/adm_roles/"><button type="button" class="btn btn-default">Cancelar</button></a>
 	</div>
 	<br>
 	</form>
