--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -45,7 +45,7 @@
 				      <div class="panel-body">
 				      		<a href="consultar/{{ mi_perfil.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="modificar/{{ mi_perfil.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="open-Modal btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal" data-id="{{ mi_perfil.id }}">Eliminar</button>
+				      		<button class="btn btn-danger btn-sm usuarios" data-toggle="modal" data-target="#myModal" data-id="{{ mi_perfil.id }}">Eliminar</button>
 
 				      </div>
 				    </div>
@@ -66,7 +66,7 @@
 				      <div class="panel-body">
 				      		<a href="consultar/{{ user.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="modificar/{{ user.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="usuarios btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal" data-id="{{ user.id }}">Eliminar</button>
+				      		<button class="btn btn-danger btn-sm usuarios" data-toggle="modal" data-target="#myModal" data-id="{{ user.id }}">Eliminar</button>
 
 				      </div>
 				    </div>
