Importar fase, url, templates, forms, views.

--- a/sap/templates/Fases/fasenueva.html
+++ b/sap/templates/Fases/fasenueva.html
@@ -16,7 +16,9 @@
 	{% if form.errors %}
 		Por favor verifique:error
 	{% endif %}
-	
+	<div class="bs-example">
+			<h3><p align="center" class="text-warning"><small>{{ mensaje }}</small></p></h3>
+	</div>
 	<form action="" method="post">
 		<table align="center">
 			{{ form.as_table }}
