--- a/sap/templates/Fases/consultarfase.html
+++ b/sap/templates/Fases/consultarfase.html
@@ -61,7 +61,7 @@
 						<tbody>
 					</table>-->
 					<div align="center">
-						<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default">Volver</button></a>
+						<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
 					</div>
 				</div>
 				
