--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -13,11 +13,12 @@
 {% block botones %}
 <div class="row">
 	<form class="navbar-form navbar-left">
-		<a href="nuevo/"><button type="button" class="btn btn-default">Crear Fase</button></a>
-		<a href="importar_fase/"><button type="button" class="btn btn-default">Importar Fase</button></a>
+		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Fase</button></a>
+		<a href="importar_fase/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>
 		<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default">
-				<input class="btn btn-default" type="submit" value="Buscar">
+				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Fases..." value="{{ query|escape }}">
+				<span class="glyphicon glyphicon-search"></span>
+				<input class="btn btn-default" type="submit" value="Buscar Fase">
 		</form>
 	</form>
 </div>
@@ -67,11 +68,10 @@
 				    <div id="collapse{{ fase.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
 
-				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="modificar/{{ fase.id }}"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-
-				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}">Eliminar</button>
-				      		<a href="#"><button type="button" class="btn btn-primary btn-sm">Gestionar Fase</button></a>
+				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
+				      		<a href="modificar/{{ fase.id }}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
+				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
+				      		<a href="#"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-th"></span> Gestionar Fase</button></a>
 				      </div>
 				    </div>
 				</div>
@@ -80,11 +80,20 @@
 		</div>
 		</div>
 		{% else %}
-			<div class="jumbotron">
-				<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Fases</small></p>
+			{% if error %}
+				<div class="jumbotron">
+  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias</b></p></h3></div>
 				</div>
-			</div>
+				<div  align="center">
+					<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/">Volver</a>
+				</div>	
+			{% else %}
+				<div class="jumbotron">
+					<div class="bs-example">
+						<p class="text-warning" align="center"><small>No se encontraron Fases</small></p>
+					</div>
+				</div>
+			{% endif %}}
 		{% endif %}
 		
 
@@ -100,8 +109,8 @@
 							Esta usted seguro de que desea eliminar la fase?
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-							<a id="fase" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
+							<a id="fase" href=""><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-ok"></span> Estoy Seguro</button></a>
 						</div>
 					</div>
 				</div>
