--- a/sap/templates/Fases/modificarfase.html
+++ b/sap/templates/Fases/modificarfase.html
@@ -31,7 +31,7 @@
 					</table>
 					<div align="center"><br>
 						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
-						<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default">Cancelar</button></a>
+						<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 					</div>
 				</div>
 				
