--- a/sap/templates/Fases/fasenueva.html
+++ b/sap/templates/Fases/fasenueva.html
@@ -25,6 +25,7 @@
 		</table>
 		{% csrf_token %}
 	<div align="center"><br>
+		<a href="#"><button type="button" class="btn btn-default">Agregar item</button></a>
 		<input class="btn btn-default" type="submit" value="Crear"/>
 		<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default">Cancelar</button></a>
 	</div>
