--- a/sap/templates/Fases/modificarfase.html
+++ b/sap/templates/Fases/modificarfase.html
@@ -30,6 +30,7 @@
 						{{ form.as_table }}
 					</table>
 					<div align="center"><br>
+						<a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>Agregar item</button></a>
 						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
 						<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 					</div>
