documentacion e icono de la pagina modificado

--- a/sap/templates/403.html
+++ b/sap/templates/403.html
@@ -12,7 +12,7 @@
 						<p>Lo sentimos pero usted carece de priviligios suficientes para realizar esta accion.</p>
 						<p>Puede seguir estos tips para solucionar el problema:</p>
 						<ul>
-							<li>Pongase en contacto con el administrador.</li>
+							<li>Pongase en contacto con el Administrador.</li>
 							<li>Mande una solicitud a la administracion solicitando permisos.</li>
 						</ul>
 					</h4>
