--- a/sap/templates/Fases/fasecreada.html
+++ b/sap/templates/Fases/fasecreada.html
@@ -14,7 +14,7 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	<h2>Fase Creada con Exito</h2>
-	<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default">OK</button></a>
+	<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> OK</button></a>
 		<div class="form-group">
 		</div>
 
