--- a/sap/templates/proyectos/consultarproyecto.html
+++ b/sap/templates/proyectos/consultarproyecto.html
@@ -71,7 +71,7 @@
 						<p><h2><span class="label label-default">El proyecto aun no cuenta con fases</span></h2></h4></p>
 					{% endif %}
 					<div align="center">
-						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
+						<a class="btn btn-default" href="javascript:window.history.go(-1);"><span class="glyphicon glyphicon-arrow-left"></span> Volver</a>
 					</div>
 				</div>
 				
