--- a/sap/templates/proyectos/modificarproyecto.html
+++ b/sap/templates/proyectos/modificarproyecto.html
@@ -12,21 +12,33 @@
 
 {% block contenido %}
 <div class="content-secondary">
-	<form action="" method="post">{% csrf_token %}
-		{% if form.errors %}
-			<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
-		{% endif %}
-		{% if mensaje %}
-			<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
-			<h6><li align="center"><b>{{ mensaje }}</b></li></h6>
-		{% endif %}
-		<table class="table table-hover table-bordered table-condensed table-responsive">
-			{{ form.as_table }}
-		</table>
-		<div align="center"><br>
-			<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
-			<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			</div>
+				
+			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+				<form action="" method="post">{% csrf_token %}
+					{% if form.errors %}
+						<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
+					{% endif %}
+					{% if mensaje %}
+						<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
+						<h6><li align="center"><b>{{ mensaje }}</b></li></h6>
+					{% endif %}
+					<table class="table table-hover table-bordered table-condensed table-responsive">
+						{{ form.as_table }}
+					</table>
+					<div align="center"><br>
+						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
+						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
+					</div>
+				</form>
+			</div>
+				
+			<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			</div>
 		</div>
-	</form>
+	</div>
 </div>
 {% endblock %}
