--- a/sap/templates/proyectos/proyectofinalizado.html
+++ b/sap/templates/proyectos/proyectofinalizado.html
@@ -86,8 +86,8 @@
 				    
 				    <div id="collapse{{ proyecto.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<a href="consultar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-				      		<a href="listar_miembros/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span> Listar Miembros</button></a>
+				      		<a href="/adm_proyectos/consultar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
+				      		<a href="/adm_proyectos/listar_miembros/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span> Listar Miembros</button></a>
 				      </div>
 				    </div>
 				</div>
