--- a/sap/templates/tipoitem/modificartipoitem.html
+++ b/sap/templates/tipoitem/modificartipoitem.html
@@ -4,7 +4,7 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="#">Modificar {{ tipoitem.nombre }}</a>
+			<a href="#">Modificar {{ proyecto.nombre }}</a>
 		</li>
 	</ul>
 </div>
@@ -31,7 +31,7 @@
 					</table>
 					<div align="center"><br>
 						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
-						<a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
+						<a href="/adm_tipoitem"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
 					</div>
 				</form>
 			</div>
