--- a/sap/templates/Roles/modificar_rol.html
+++ b/sap/templates/Roles/modificar_rol.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block contenido %}
-<div class="content-secondary">c
+<div class="content-secondary">
 	{% if form.errors %}
 		Por favor verifique: 
 	{% endif %}
@@ -19,6 +19,7 @@
 	<form action="" method="post">
 		<table>
 			{{ form.as_table }}
+			{{ permisos.as_table}}
 		</table>
 		{% csrf_token %}
 	<div align="center">
