--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -48,6 +48,7 @@
 						<ul class="dropdown-menu">
 						  <li><a href="/adm_usuarios">Administrar Usuarios</a></li>
 						  <li><a href="/adm_roles">Administrar Roles</a></li>
+						  {% block tipo_Item_y_Atributo %}{% endblock %}
 						</ul>
 					  </div>
 				  </div>
