--- a/sap/templates/Roles/consultar_rol.html
+++ b/sap/templates/Roles/consultar_rol.html
@@ -18,6 +18,7 @@
 		<li><h4><span class="label label-default">{{ permiso.name }}</span></h4></li>
 	{% endfor %}
 	</ul>
+	<p><h4>Proyecto: <span class="label label-default">{{ rol.proyecto }}</span></h4></p>
 	<p><h4>Descripcion: <span class="label label-default">{{ rol.descripcion }}</span></h4></p>
 	<p><h4>Usuarios con este Rol: </h4></p>
 	<p>
