vistas,url y template de modificar tipo de atributo

--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -74,7 +74,7 @@
 				      <div class="panel-body">
 
 				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-				      		<a href="modificar/{{ fase.id }}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
+				      		<a href="modificar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
 				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
 				      		<a href="#"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-th"></span> Gestionar Fase</button></a>
 				      </div>
