caso de uso eliminar tipo de atributo OK

--- a/sap/templates/tipoAtributo/tipo_atributos.html
+++ b/sap/templates/tipoAtributo/tipo_atributos.html
@@ -52,7 +52,7 @@
 				      <div class="panel-body">
 				      		<a href="consultar/{{ tipo_atributo.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="modificar/{{ tipo_atributo.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="btn btn-danger btn-sm roles" data-toggle="modal" data-target="#myModal" data-id="{{ tipo_atributo.id }}">Eliminar</button>
+				      		<button class="btn btn-danger btn-sm tipoatributo" data-toggle="modal" data-target="#myModal" data-id="{{ tipo_atributo.id }}">Eliminar</button>
 
 				      </div>
 				    </div>
