--- a/sap/templates/tipoitem/modificartipoitem.html
+++ b/sap/templates/tipoitem/modificartipoitem.html
@@ -31,7 +31,7 @@
 					</table>
 					<div align="center"><br>
 						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
-						<a href="/adm_tipoitem"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</button></a>
+						<a class="btn btn-default" href="javascript:window.history.go(-1);"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
 					</div>
 				</form>
 			</div>
