--- a/sap/templates/tipoitem/tipoitemalerta.html
+++ b/sap/templates/tipoitem/tipoitemalerta.html
@@ -4,7 +4,7 @@
 	<div class="bs-example" align="center">
 		<h2>Notificacion</h2>
 			<p class="text-warning"><small>{{ mensaje }}</small></p>
-			<a href="/adm_tipoitem"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
+			<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Volver</button></a>
 	</div>
 </div>
 {% endblock %}
