--- a/sap/templates/items/items.html
+++ b/sap/templates/items/items.html
@@ -13,12 +13,12 @@
 {% block botones %}
 <div class="row">
 	<form class="navbar-form navbar-left">
-		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Fase</button></a>
-		<a href="importar_fase/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>
+		<a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Item</button></a>
+<!-- 		<a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>-->
 		<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Fases..." value="{{ query|escape }}">
+				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Items..." value="{{ query|escape }}">
 				<span class="glyphicon glyphicon-search"></span>
-				<input class="btn btn-default" type="submit" value="Buscar Fase">
+				<input class="btn btn-default" type="submit" value="Buscar Item">
 		</form>
 	</form>
 </div>
@@ -27,7 +27,7 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-		{% if lista_fases %}
+		{% if lista_items %}
 		<div class="row ">
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
@@ -44,13 +44,13 @@
 				    	</div>
 				    </div>
 				</div>
-			{% for fase in lista_fases %}
+			{% for item in lista_items %}
 				<div class="panel panel-default">
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ fase.id }}">
-				          		{{ fase.nombre }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ item.id }}">
+				          		{{ item.nombre }}
 				        		</a>
 				      		</h4>
 				    	</div>
@@ -58,20 +58,19 @@
 				    <div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ fase.id }}">
-				          		{{ fase.estado }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ item.id }}">
+				          		{{ item.estado }}
 				        		</a>
 				      		</h4>
 				    	</div>
 				    </div>
 				    
-				    <div id="collapse{{ fase.id }}" class="panel-collapse collapse pull-left">
+				    <div id="collapse{{ item.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
 
-				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-				      		<a href="modificar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
-				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
-				      		<a href="adm_items/{{ fase.id }}/"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-th"></span> Gestionar Fase</button></a>
+				      		<a href="#"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
+				      		<a href="#"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
+				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ item.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
 				      </div>
 				    </div>
 				</div>
@@ -85,12 +84,12 @@
   					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias</b></p></h3></div>
 				</div>
 				<div  align="center">
-					<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/">Volver</a>
+					<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}">Volver</a>
 				</div>	
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Fases</small></p>
+						<p class="text-warning" align="center"><small>No se encontraron Items</small></p>
 					</div>
 				</div>
 			{% endif %}}
