--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -42,7 +42,7 @@
 				<div class="row">
 				  <div class="col-md-6">
 					<br>
-					  <a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Inicio</button></a><!-- Boton de Inicio -->
+					  <a href="/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-home"></span> Inicio</button></a><!-- Boton de Inicio -->
 					  <div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><!-- Boton de Configuracion -->
 						  <span class="glyphicon glyphicon-cog"></span> Configuracion
