--- a/sap/templates/tipoitem/tipoitem.html
+++ b/sap/templates/tipoitem/tipoitem.html
@@ -49,7 +49,7 @@
 				    </div>
 				</div>
 			{% for tipoitem in lista_tipoitem %}
-				<div class="panel-group" id="accordion">
+				<div class="panel panel-default">
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
