--- a/sap/templates/tipoitem/gestionartipoitem.html
+++ b/sap/templates/tipoitem/gestionartipoitem.html
@@ -17,10 +17,10 @@
 
 {% block botones %}
 <div class="container">
-
+	
 	<div class="col-xs-6 col-sm-6 col-md-6 col lg-6">
 		{% if tipoatributos_dispon %}
-		<div class="alert alert-info"><h3><p align="center"><b>Tipo de Atributos disponibles</p></h3></div>
+		<div class="alert alert-info"><h3><p align="center"><b>Tipo de Atributos disponibles</b></p></h3></div>
         	<div class="panel-group" id="accordion">
 				{% for tipoatributo in tipoatributos_dispon %}
 					<div class="panel panel-default">
@@ -32,7 +32,7 @@
 						</div>
 								 
 						<div class="col-md-3 col lg-3">
-							<a href="agregar_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share"></span> Agregar</button></a>
+							<a href="agregar_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-share"></span> Agregar</button></a>
 						</div>
 								 
 					</div>
@@ -50,7 +50,7 @@
 	
 	<div class="col-xs-6 col-sm-6 col-md-6 col lg-6">
 		{% if tipoatributo_selec %}
-		<div class="alert alert-success"><h3><p align="center"><b>Tipo de Atributos seleccionados</p></h3></div>
+		<div class="alert alert-success"><h3><p align="center"><b>Tipo de Atributos seleccionados</b></p></h3></div>
 			<div class="panel-group" id="accordion">
 				{% for tipoatributo in tipoatributo_selec %}
 					<div class="panel panel-default">
@@ -62,7 +62,9 @@
 						</div>
 								 
 						<div class="col-md-6 col lg-6">
-							<a href="agregar_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-trash"></span> Quitar</button></a>
+							<a href="subir_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-arrow-up"></span> Subir</button></a>
+							<a href="bajar_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-arrow-down"></span> Bajar</button></a>
+							<a href="quitar_tipo_atributo/{{ tipoatributo.id }}/"><button type="button" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span> Quitar</button></a>
 						</div>
 								 
 					</div>
@@ -77,6 +79,8 @@
 			</div> 
 		{% endif %}    
     </div>
-    
+</div>
+<div class="row ">
+    	<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> volver</button></a>
 </div>
 {% endblock %}
