--- a/sap/templates/tipoitem/gestionartipoitem.html
+++ b/sap/templates/tipoitem/gestionartipoitem.html
@@ -22,12 +22,32 @@
 		{% if tipoatributos_dispon %}
 		<div class="alert alert-info"><h3><p align="center"><b>Tipo de Atributos disponibles</b></p></h3></div>
         	<div class="panel-group" id="accordion">
+        		<div class="panel panel-default">
+					
+						<div class="col-md-5 col lg-5">
+							<div class="panel-heading">
+								<h4 class="panel-title"><b>Nombre</b></h4>
+							</div>
+						</div>
+						
+						<div class="col-md-4 col lg-4">
+							<div class="panel-heading">
+								<h4 class="panel-title"><b>Tipo</b></h4>
+							</div>
+						</div>
+					</div>
 				{% for tipoatributo in tipoatributos_dispon %}
 					<div class="panel panel-default">
 					
-						<div class="col-md-9 col lg-9">
+						<div class="col-md-5 col lg-5">
 							<div class="panel-heading">
-								<h4 class="panel-title"><b>{{ tipoatributo.nombre }}</b></h4>
+								<h4 class="panel-title">{{ tipoatributo.nombre }}</h4>
+							</div>
+						</div>
+						
+						<div class="col-md-4 col lg-4">
+							<div class="panel-heading">
+								<h4 class="panel-title">{{ tipoatributo.tipo }}</h4>
 							</div>
 						</div>
 								 
@@ -52,12 +72,20 @@
 		{% if tipoatributo_selec %}
 		<div class="alert alert-success"><h3><p align="center"><b>Tipo de Atributos seleccionados</b></p></h3></div>
 			<div class="panel-group" id="accordion">
+				<div class="panel panel-default">
+					
+						<div class="col-md-6 col lg-6">
+							<div class="panel-heading">
+								<h4 class="panel-title"><b>Nombre</b></h4>
+							</div>
+						</div>
+				</div>
 				{% for tipoatributo in tipoatributo_selec %}
 					<div class="panel panel-default">
 					
 						<div class="col-md-6 col lg-6">
 							<div class="panel-heading">
-								<h4 class="panel-title"><b>{{ tipoatributo.nombre }}</b></h4>
+								<h4 class="panel-title">{{ tipoatributo.nombre }}</h4>
 							</div>
 						</div>
 								 
