modificaciones en vistas modificar y crear Rol.. agregacion de campo Fases en models de roles

--- a/sap/templates/Roles/consultar_rol.html
+++ b/sap/templates/Roles/consultar_rol.html
@@ -11,25 +11,32 @@
 
 {% block contenido %}
 <div class="content-secondary">
-	<p><h4>Id: <span class="label label-default">{{ rol.id }}</span></h4></p>
-	<p><h4>Permisos: </h4></p>
-	<ul>
-	{% for permiso in permisos %}
-		<li><h4><span class="label label-default">{{ permiso.name }}</span></h4></li>
-	{% endfor %}
-	</ul>
-	<p><h4>Proyecto: <span class="label label-default">{{ rol.proyecto }}</span></h4></p>
-	<p><h4>Descripcion: <span class="label label-default">{{ rol.descripcion }}</span></h4></p>
-	<p><h4>Usuarios con este Rol: </h4></p>
-	<p>
-	{% if usuarios %}
-		{% for usuario in usuarios %}
-			<h4><span class="label label-default">{{ usuario.username }} | </span></h4>
+		<p><h4>Id: <span class="label label-default">{{ rol.id }}</span></h4></p>
+		<p><h4>Permisos: </h4></p>
+		<ul>
+		{% for permiso in permisos %}
+			<li><h4><span class="label label-default">{{ permiso.name }}</span></h4></li>
 		{% endfor %}
-	{% else %}
-		<h4><span class="label label-default"> No hay usuarios con este Rol</span></h4>
-	{% endif %}
-	<p>
+		</ul>
+		<p><h4>Proyecto: <span class="label label-default">{{ rol.proyecto }}</span></h4></p>
+		<p><h4>Fases:
+		<ul>
+		{% for fase in fases %}
+			 <li><h4><span class="label label-default">{{ fase.nombre }}</span></h4></li>
+		{% endfor %}
+		</ul>
+		</h4></p>
+		<p><h4>Descripcion: <span class="label label-default">{{ rol.descripcion }}</span></h4></p>
+		<p><h4>Usuarios con este Rol: </h4></p>
+		<p>
+		{% if usuarios %}
+			{% for usuario in usuarios %}
+				<h4><span class="label label-default">{{ usuario.username }} | </span></h4>
+			{% endfor %}
+		{% else %}
+			<h4><span class="label label-default"> No hay usuarios con este Rol</span></h4>
+		{% endif %}
+		</p>
 </div>
 <br>
 <div align="center">
