--- a/sap/templates/Roles/rolnuevo.html
+++ b/sap/templates/Roles/rolnuevo.html
@@ -19,7 +19,7 @@
 	
 	<form action="" method="post">
 		<table align="center">
-			{{ form.as_p }}
+			{{ form.as_table }}
 		</table>
 		{% csrf_token %}
 	<div align="center"><br>
