errores de inicio de sesion con usuario con roles no asignados a proyectos y el tema de lider solucionado

--- a/sap/templates/tipoitem/creartipoitem.html
+++ b/sap/templates/tipoitem/creartipoitem.html
@@ -31,7 +31,7 @@
 						{{ form.as_table }}
 					</table>
 					<div align="center"><br>
-						<input class="btn btn-default" type="submit" value="Guardar"/>
+						<input class="btn btn-default" type="submit" value="Crear"/>
 						<a class="btn btn-default" href="javascript:window.history.go(-1);"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
 					</div>
 				</form>
