--- a/sap/templates/tipoitem/tipoitem.html
+++ b/sap/templates/tipoitem/tipoitem.html
@@ -94,7 +94,7 @@
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Tipo de Items</small></p>
+						<p class="text-warning" align="center"><small>No se encontraron Tipo de Items en este proyecto</small></p>
 					</div>
 				</div>
 			{% endif %}}
