Pruebas de tipo de item terminadas

--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -20,7 +20,7 @@
 			<p style="color:red;">No se encontraron coincidencias.</p>
 			{% endif %}
 			<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default">
+				<input type="text" name="busqueda" class="form-control">
 				<input class="btn btn-default" type="submit" value="Buscar">
 			</form>
 			
