--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -26,7 +26,7 @@
 		<a href="proyecto_finalizado/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-ok-circle"></span> Proyectos Finalizados</button></a>
 		<div class="form-group">
 			<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de proyecto..." value="{{ query|escape }}">
+				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de proyecto..." value="{{ query|escape }}">
 				<span class="glyphicon glyphicon-search"></span>
 				<input class="btn btn-default" type="submit" value="Buscar Proyectos">
 			</form>
