--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -21,7 +21,7 @@
 		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Fase</button></a>
 		<a href="importar_fase/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>
 		<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Fases..." value="{{ query|escape }}">
+				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de Fases..." value="{{ query|escape }}">
 				<span class="glyphicon glyphicon-search"></span>
 				<input class="btn btn-default" type="submit" value="Buscar Fase">
 		</form>
