--- a/sap/templates/tipoitem/listarproyectos.html
+++ b/sap/templates/tipoitem/listarproyectos.html
@@ -5,11 +5,36 @@
 <li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_atributo">Administrar Tipos de Atributo</a></li>
 {% endblock %}
 
+{% block menu %}		
+<div class="menu">
+	<ul>
+		<li id="option1" class="active">
+			<a href="/">Importar Tipo de Item</a>
+		</li>
+	</ul>
+</div>
+{% endblock %}
+
+{% block botones %}
+	{% if not error and lista_proyectos%}
+		<div class="alert alert-info"><h2><p align="center"><b>Seleccione el proyecto al cual desea acceder</b></p></h2></div>
+	{% endif %}
+<div class="row">
+	<form class="navbar-form navbar-left">
+		
+			<form action="" method="get">
+				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de proyecto..." value="{{ query|escape }}">
+				<span class="glyphicon glyphicon-search"></span>
+				<input class="btn btn-default" type="submit" value="Buscar Proyectos">
+			</form>
+	</form>
+</div>
+{% endblock %}
+
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 		{% if lista_proyectos %}
-  		<div class="alert alert-info"><h2><p align="center"><b>Seleccione el proyecto al cual desea acceder</b></p></h2></div>
 		<div class="row ">
 		<div class="panel-group" id="accordion">
         		<div class="panel panel-default">
@@ -65,11 +90,20 @@
 				</div>
 			</div>
 		{% else %}
+			{% if error %}
+				<div class="jumbotron">
+  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias</b></p></h3></div>
+				</div>
+				<div  align="center">
+					<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/listar_proyectos/"><span class="glyphicon glyphicon-arrow-left"></span> Volver</a>
+				</div>	
+			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
 						<p class="text-warning" align="center"><small>Actualmente no hay proyectos cargados en el sistema</small></p>
 					</div>
 				</div>
+			{% endif%}
 		{% endif %}
 </div>		
 </div>
