--- a/sap/templates/tipoitem/tipoitem.html
+++ b/sap/templates/tipoitem/tipoitem.html
@@ -21,7 +21,7 @@
 		<a href="crear_tipoitem/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Tipo de Item</button></a>
 		<a href="listar_proyectos/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Tipo de Item</button></a>
 		<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Tipo de Item..." value="{{ query|escape }}">
+				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de Tipo de Item..." value="{{ query|escape }}">
 				<span class="glyphicon glyphicon-search"></span>
 				<input class="btn btn-default" type="submit" value="Buscar Tipo de Item">
 		</form>
